--- a/JSP website versions/RegisterPage/nbproject/private/private.properties
+++ b/JSP website versions/RegisterPage/nbproject/private/private.properties
@@ -1,8 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\mitch\\AppData\\Roaming\\NetBeans\\8.0\\tomcat80.properties
-j2ee.server.domain=C:/Users/mitch/AppData/Roaming/NetBeans/8.0/apache-tomcat-8.0.3.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.3
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.3:base=apache-tomcat-8.0.3.0_base
-javac.debug=true
-javadoc.preview=true
-selected.browser=Chrome
-user.properties.file=C:\\Users\\mitch\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+deploy.ant.properties.file=C:\\Users\\Emma Kinnear\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+j2ee.server.home=C:/Program Files (x86)/Apache Software Foundation/Tomcat 9.0
+j2ee.server.instance=tomcat90:home=C:\\Program Files (x86)\\Apache Software Foundation\\Tomcat 9.0
+user.properties.file=C:\\Users\\Emma Kinnear\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
